--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.1.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
+    "@types/gapi.auth2": "^0.0.56",
+    "angular-auth-oidc-client": "^14.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -28,7 +30,10 @@
     "@angular-devkit/build-angular": "^14.1.2",
     "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/gapi": "^0.0.42",
     "@types/jasmine": "~4.0.0",
+    "@types/jest": "^28.1.8",
+    "@types/mocha": "^9.1.1",
     "autoprefixer": "^10.4.8",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
