--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "types": ["gapi", "gapi.auth2", "jest", "mocha"],
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
