--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "@types/gapi.auth2": "^0.0.56",
     "angular-auth-oidc-client": "^14.1.3",
+    "cypress": "^10.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
