--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 12.x
       # Run npm install and build on our code
       - run: npm install
-      - run: npm run build --if-present
+      - run: npm run build
       # Deploy to Netlify using our dev secrets
       - name: Deploy to netlify
         uses: netlify/actions/cli@master
