--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,9 @@ jobs:
           node-version: 16.x
       # Build the app using cypress
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4.1.0
         with:
+          config-file: cypress.config.js
           build: npm run build
           start: npm start
           wait-on: http://localhost:4200
